# svlint

./: .gitignore  BUILDENV  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MANUAL.md  Makefile  README.md  RULES.md  build.rs  keywords.sh  snapcraft.yaml  style_keyword_.sh
.github/workflows/: mdgen.yml  regression.yml  release.yml
md/: MANUAL_template.tex  explanation-action_block_with_side_effect.md  explanation-blocking_assignment_in_always_ff.md  explanation-blocking_assignment_in_always_latch.md  explanation-case_default.md  explanation-default_nettype_none.md  explanation-enum_with_type.md  explanation-explicit_case_default.md  explanation-explicit_if_else.md  explanation-function_same_as_system_function.md  explanation-function_with_automatic.md  explanation-generate_case_with_label.md  explanation-generate_for_with_label.md  explanation-generate_if_with_label.md  explanation-generate_keyword_forbidden.md  explanation-generate_keyword_required.md  explanation-genvar_declaration_in_loop.md  explanation-genvar_declaration_out_loop.md  explanation-inout_with_tri.md  explanation-input_with_var.md  explanation-interface_port_with_modport.md  explanation-keyword_forbidden_always.md  explanation-keyword_forbidden_generate.md  explanation-keyword_forbidden_priority.md  explanation-keyword_forbidden_unique.md  explanation-keyword_forbidden_unique0.md  explanation-keyword_forbidden_wire_reg.md  explanation-keyword_required_generate.md  explanation-level_sensitive_always.md  explanation-localparam_explicit_type.md  explanation-localparam_type_twostate.md  explanation-loop_statement_in_always_comb.md  explanation-loop_statement_in_always_ff.md  explanation-loop_statement_in_always_latch.md  explanation-loop_variable_declaration.md  explanation-lowercamelcase_interface.md  explanation-lowercamelcase_module.md  explanation-lowercamelcase_package.md  explanation-multiline_for_begin.md  explanation-multiline_if_begin.md  (+199 more)
rulesets/: DaveMcEwan-design.toml  DaveMcEwan-designnaming.toml  designintent.toml  designintentV2001.toml  parseonly.md  parseonly.toml  simsynth.toml  style.toml  svlint-DaveMcEwan-design  svlint-DaveMcEwan-design.cmd  svlint-DaveMcEwan-designnaming  svlint-DaveMcEwan-designnaming.cmd  svlint-designintent  svlint-designintent.cmd  svlint-designintentV2001  svlint-designintentV2001.cmd  svlint-naming  svlint-naming.cmd  svlint-parseonly  svlint-parseonly.cmd  svlint-simsynth  svlint-simsynth.cmd  svlint-style  svlint-style.cmd  svlint-verifintent  svlint-verifintent.cmd  svls-DaveMcEwan-design  svls-DaveMcEwan-design.cmd  svls-DaveMcEwan-designnaming  svls-DaveMcEwan-designnaming.cmd  svls-designintent  svls-designintent.cmd  svls-designintentV2001  svls-designintentV2001.cmd  svls-parseonly  svls-parseonly.cmd  svls-simsynth  svls-simsynth.cmd  svls-style  svls-style.cmd  (+3 more)
rulesets/subsets/: empty.toml
rulesets/toml/: parseonly.toml
src/: config.rs  lib.rs  linter.rs  main.rs  mdgen.rs  printer.rs  rules.rs  svlint.rs
src/rules/: blocking_assignment_in_always_ff.rs  blocking_assignment_in_always_latch.rs  case_default.rs  default_nettype_none.rs  enum_with_type.rs  eventlist_comma_always_ff.rs  explicit_case_default.rs  explicit_if_else.rs  for_with_begin.rs  forbid_always.rs  forbid_generate.rs  forbid_priority.rs  forbid_tab.rs  forbid_unique.rs  forbid_unique0.rs  forbid_wire_reg.rs  function_same_as_system_function.rs  function_with_automatic.rs  generate_case_with_label.rs  generate_for_with_label.rs  generate_if_with_label.rs  generate_keyword.rs  generate_keyword_forbidden.rs  generate_keyword_required.rs  genvar_declaration.rs  genvar_declaration_in_loop.rs  genvar_declaration_out_loop.rs  if_else.rs  if_with_begin.rs  inout_with_tri.rs  input_with_var.rs  interface_port_with_modport.rs  keyword_forbidden_always.rs  keyword_forbidden_generate.rs  keyword_forbidden_priority.rs  keyword_forbidden_unique.rs  keyword_forbidden_unique0.rs  keyword_forbidden_wire_reg.rs  keyword_required_generate.rs  keywords.txt  (+108 more)
src/syntaxrules/: action_block_with_side_effect.rs  blocking_assignment_in_always_at_edge.rs  blocking_assignment_in_always_ff.rs  blocking_assignment_in_always_latch.rs  case_default.rs  default_nettype_none.rs  default_nettype_wire_at_end.rs  enum_with_type.rs  eventlist_comma_always_ff.rs  eventlist_or.rs  explicit_brackets_for_confusing_precedence.rs  explicit_case_default.rs  explicit_if_else.rs  function_same_as_system_function.rs  function_with_automatic.rs  general_always_level_sensitive.rs  general_always_no_edge.rs  generate_case_with_label.rs  generate_for_with_label.rs  generate_if_with_label.rs  genvar_declaration_in_loop.rs  genvar_declaration_out_loop.rs  implicit_case_default.rs  inout_with_tri.rs  input_with_var.rs  interface_identifier_matches_filename.rs  interface_port_with_modport.rs  keyword_forbidden_always.rs  (+129 more)
testcases/: forbid_always.sv  forbid_tab.sv  forbid_wire_reg.sv
(+396 files in other folders)
