[package]
name = "svlint"
version = "0.2.17-pre"
authors = ["dalance@gmail.com"]
repository = "https://github.com/dalance/svlint"
keywords = ["lint", "verilog", "systemverilog"]
categories = ["command-line-utilities"]
license = "MIT"
readme = "README.md"
description = "SystemVerilog linter"
edition = "2018"

[package.metadata.release]
dev-version-ext            = "pre"
pre-release-commit-message = "Prepare to v{{version}}"
pro-release-commit-message = "Start next development iteration v{{version}}"
tag-message                = "Bump version to {{version}}"
tag-prefix                 = ""
pre-release-replacements = [
    {file="CHANGELOG.md", search="Unreleased", replace="v{{version}}"},
    {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}"},
    {file="CHANGELOG.md", search="Change Log", replace="Change Log\n\n## [Unreleased](https://github.com/dalance/svlint/compare/v{{version}}...Unreleased) - ReleaseDate"},
    {file="snapcraft.yaml", search="version v[0-9\\.]+", replace="version v{{version}}"},
]

[[bin]]
name = "mdgen"
path = "src/mdgen.rs"

[dependencies]
colored      = "1.6"
failure      = "0.1"
libloading   = "0.5"
regex        = "1.0"
serde        = "1.0"
serde_derive = "1.0"
serde_regex  = "0.4"
structopt    = "0.3"
sv-parser    = "0.4.6"
term         = "0.5"
toml         = "0.4"

[build-dependencies]
regex   = "1"
walkdir = "2"
