[package]
name = "svlint"
version = "0.4.19-pre"
authors = ["dalance@gmail.com"]
repository = "https://github.com/dalance/svlint"
keywords = ["lint", "verilog", "systemverilog"]
categories = ["command-line-utilities"]
license = "MIT"
readme = "README.md"
description = "SystemVerilog linter"
edition = "2018"

[package.metadata.release]
dev-version-ext             = "pre"
pre-release-commit-message  = "Prepare to v{{version}}"
post-release-commit-message = "Start next development iteration v{{version}}"
tag-message                 = "Bump version to {{version}}"
tag-prefix                  = ""
pre-release-replacements    = [
    {file="CHANGELOG.md", search="Unreleased", replace="v{{version}}"},
    {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}"},
    {file="CHANGELOG.md", search="Change Log", replace="Change Log\n\n## [Unreleased](https://github.com/dalance/svlint/compare/v{{version}}...Unreleased) - ReleaseDate"},
    {file="snapcraft.yaml", search="version v[0-9\\.]+", replace="version v{{version}}"},
]

[[bin]]
name = "mdgen"
path = "src/mdgen.rs"

[dependencies]
anyhow                  = "1.0"
enquote                 = "1.0"
colored                 = "2.0"
libloading              = "0.7"
regex                   = "1.5"
serde                   = "1.0"
serde_derive            = "1.0"
serde_regex             = "1.1"
structopt               = "0.3"
sv-parser               = "0.11.2"
term                    = "0.7"
toml                    = "0.5"
verilog-filelist-parser = "0.1.2"

[build-dependencies]
regex   = "1"
walkdir = "2"

#[patch.crates-io]
#sv-parser = {path = "../sv-parser/sv-parser"}
