[package]
name = "svlint"
version = "0.9.4"
authors = ["dalance@gmail.com"]
repository = "https://github.com/dalance/svlint"
keywords = ["SystemVerilog", "Verilog", "lint", "svls"]
categories = ["command-line-utilities"]
license = "MIT"
readme = "README.md"
description = "SystemVerilog linter"
edition = "2018"
default-run = "svlint"

[package.metadata.release]
pre-release-commit-message = "Prepare to v{{version}}"
tag-message                = "Bump version to {{version}}"
tag-prefix                 = ""
pre-release-replacements   = [
    {file="CHANGELOG.md", search="Unreleased", replace="v{{version}}"},
    {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}"},
    {file="CHANGELOG.md", search="Change Log", replace="Change Log\n\n## [Unreleased](https://github.com/dalance/svlint/compare/v{{version}}...Unreleased) - ReleaseDate"},
    {file="snapcraft.yaml", search="version v[0-9\\.]+", replace="version v{{version}}"},
]

[[bin]]
name = "mdgen"
path = "src/mdgen.rs"

[dependencies]
anyhow                  = "1.0"
enquote                 = "1.0"
colored                 = "3.0"
libloading              = "0.8"
regex                   = "1.5"
serde                   = "1.0"
serde_derive            = "1.0"
serde_regex             = "1.1"
clap                    = {version = "3.2", features = ["derive"]}
clap_complete           = "3.2"
sv-parser               = "0.13.3"
term                    = "1.0"
toml                    = "0.9"
sv-filelist-parser      = "0.1.3"
chardetng               = "0.1.17"
encoding_rs             = "0.8.34"

[build-dependencies]
regex   = "1"
walkdir = "2"

#[patch.crates-io]
#sv-parser = {path = "../sv-parser/sv-parser"}

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }
